build_output_3.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preBusinessDebugBuild UP-TO-DATE
> Task :app:mergeBusinessDebugNativeDebugMetadata NO-SOURCE
> Task :app:compileBusinessDebugAidl UP-TO-DATE
> Task :app:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :app:dataBindingMergeDependencyArtifactsBusinessDebug UP-TO-DATE
> Task :app:generateBusinessDebugMaterialThemeBuilderRes
> Task :app:generateBusinessDebugResValues UP-TO-DATE
> Task :app:generateBusinessDebugResources
> Task :app:mergeBusinessDebugResources
> Task :app:packageBusinessDebugResources
> Task :app:processBusinessDebugNavigationResources
> Task :app:generateBusinessDebugBuildConfig
> Task :app:generateBusinessDebugMaterialThemeBuilderSource
> Task :app:compileBusinessDebugNavigationResources
> Task :app:mapBusinessDebugSourceSetPaths
> Task :app:createBusinessDebugCompatibleScreenManifests
> Task :app:extractDeepLinksBusinessDebug
> Task :app:checkBusinessDebugAarMetadata
> Task :app:parseBusinessDebugLocalResources
> Task :app:processBusinessDebugMainManifest
> Task :app:dataBindingGenBaseClassesBusinessDebug
> Task :app:processBusinessDebugManifest
> Task :app:preBusinessReleaseBuild UP-TO-DATE
> Task :app:preWhatsappDebugBuild UP-TO-DATE
> Task :app:preWhatsappReleaseBuild UP-TO-DATE
> Task :app:processBusinessDebugManifestForPackage
> Task :app:javaPreCompileBusinessDebug
> Task :app:compileBusinessReleaseAidl
> Task :app:mergeBusinessDebugShaders
> Task :app:compileBusinessDebugShaders NO-SOURCE
> Task :app:generateBusinessDebugAssets UP-TO-DATE
> Task :app:mergeBusinessDebugAssets
> Task :app:compileWhatsappReleaseAidl
> Task :app:desugarBusinessDebugFileDependencies
> Task :app:compileWhatsappDebugAidl
> Task :app:compressBusinessDebugAssets

> Task :app:fixAidlGeneratedJava
fixAidlGeneratedJava: patched C:\Project\WaEnhancer\app\build\generated\aidl_source_output_dir\businessDebug\out\com\wmods\wppenhacer\xposed\bridge\WaeIIFace.java
fixAidlGeneratedJava: patched C:\Project\WaEnhancer\app\build\generated\aidl_source_output_dir\businessRelease\out\com\wmods\wppenhacer\xposed\bridge\WaeIIFace.java
fixAidlGeneratedJava: patched C:\Project\WaEnhancer\app\build\generated\aidl_source_output_dir\whatsappDebug\out\com\wmods\wppenhacer\xposed\bridge\WaeIIFace.java
fixAidlGeneratedJava: patched C:\Project\WaEnhancer\app\build\generated\aidl_source_output_dir\whatsappRelease\out\com\wmods\wppenhacer\xposed\bridge\WaeIIFace.java
fixAidlGeneratedJava: patched 4 file(s).

> Task :app:mergeBusinessDebugJniLibFolders
> Task :app:validateSigningBusinessDebug
> Task :app:writeBusinessDebugAppMetadata
> Task :app:writeBusinessDebugSigningConfigVersions
> Task :app:mergeWhatsappDebugNativeDebugMetadata NO-SOURCE
> Task :app:dataBindingMergeDependencyArtifactsWhatsappDebug
> Task :app:generateWhatsappDebugMaterialThemeBuilderRes
> Task :app:mergeBusinessDebugNativeLibs
> Task :app:generateWhatsappDebugResValues

> Task :app:stripBusinessDebugDebugSymbols
Unable to strip the following libraries, packaging them as they are: libdexkit.so. Run with --info option to learn more.

> Task :app:generateWhatsappDebugResources
> Task :app:checkBusinessDebugDuplicateClasses
> Task :app:processBusinessDebugResources
> Task :app:mergeWhatsappDebugResources
> Task :app:compileBusinessDebugKotlin NO-SOURCE
> Task :app:mergeExtDexBusinessDebug

> Task :app:compileBusinessDebugJavaWithJavac
C:\Project\WaEnhancer\app\src\main\java\com\wmods\wppenhacer\xposed\features\others\AudioSpeedControl.java:59: error: <anonymous com.wmods.wppenhacer.xposed.features.others.AudioSpeedControl$2> is not abstract and does not override abstract method onItemBind(FMessageWpp,ViewGroup) in OnConversationItemListener
        ConversationItemListener.conversationListeners.add(new ConversationItemListener.OnConversationItemListener() {
                                                                                                                     ^
C:\Project\WaEnhancer\app\src\main\java\com\wmods\wppenhacer\xposed\features\others\AudioSpeedControl.java:61: error: method does not override or implement a method from a supertype
            @Override
            ^
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors

> Task :app:compileBusinessDebugJavaWithJavac FAILED

[Incubating] Problems report is available at: file:///C:/Project/WaEnhancer/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileBusinessDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  C:\Project\WaEnhancer\app\src\main\java\com\wmods\wppenhacer\xposed\features\others\AudioSpeedControl.java:59: error: <anonymous com.wmods.wppenhacer.xposed.features.others.AudioSpeedControl$2> is not abstract and does not override abstract method onItemBind(FMessageWpp,ViewGroup) in OnConversationItemListener
          ConversationItemListener.conversationListeners.add(new ConversationItemListener.OnConversationItemListener() {
                                                                                                                       ^
  C:\Project\WaEnhancer\app\src\main\java\com\wmods\wppenhacer\xposed\features\others\AudioSpeedControl.java:61: error: method does not override or implement a method from a supertype
              @Override
              ^
  Note: Some input files use or override a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  Note: Some input files use unchecked or unsafe operations.
  Note: Recompile with -Xlint:unchecked for details.
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 17s
44 actionable tasks: 41 executed, 3 up-to-date
